english language updates, and leaving font-weight alone on hover in admin tab menu to stop the tab widths jumping

--- a/system/pyrocms/assets/css/jquery/jquery-ui.css
+++ b/system/pyrocms/assets/css/jquery/jquery-ui.css
@@ -68,7 +68,7 @@
 ----------------------------------*/
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid #d3d3d3; background: #f2f2f2; color: #555555; }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #555555; text-decoration: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #a2a2a2; background: #c6c6c6; font-weight: normal; color: #212121; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #a2a2a2; background: #c6c6c6; color: #212121; }
 .ui-state-hover a, .ui-state-hover a:hover { color: #212121; text-decoration: none; }
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #999999; background: #c6c6c6; color: #242424; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #242424; text-decoration: none; }
